# NetLicensing-MCP

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  glama.json  pyproject.toml  server.json
.github/: labeler.yml  release.yml
.github/codeql/: codeql-config.yml
.github/codeql/python-models/: codeql-pack.yml  redact-sanitizer.yml
.github/workflows/: netlicensing-ci.yml  netlicensing-codeql.yml  netlicensing-labeler.yml  netlicensing-release.yml
deploy/aws/: README.md  apprunner.yaml  deploy.sh  ecs-fargate.yaml
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
src/netlicensing_mcp/: __init__.py  client.py  redaction.py  responses.py  safety.py  server.py  validation.py
src/netlicensing_mcp/prompts/: __init__.py  audit.py
src/netlicensing_mcp/tools/: __init__.py  bundles.py  helpers.py  license_templates.py  licensees.py  licenses.py  payment_methods.py  product_modules.py  products.py  tokens.py  transactions.py  utilities.py
src/netlicensing_mcp/workflows/: _thresholds.py  customer_health.py  validation_explain.py
tests/: test_auth_middleware.py  test_customer_health.py  test_demo_credential_fallback.py  test_path_traversal.py  test_redaction.py  test_responses.py  test_safety_tokens.py  test_tools.py  test_validation.py  test_validation_explain.py
tests/fixtures/customer_health/: licensee_acme.json  licensee_acme_inactive.json  licenses_acme.json  validate_acme_all_green.json  validate_acme_floating_saturated.json  validate_acme_near_expiry.json  validate_acme_quota_exhausted.json
tests/fixtures/validation_explain/: validate_acme_node_mismatch.json  validate_acme_subscription_expired.json
